# adv-assignment-3

./: Assignment3.docx
Task 1/: Account.cpp  Account.h  CMakeLists.txt  CheckingAccount.cpp  CheckingAccount.h  I_Printable.cpp  I_Printable.h  SavingsAccount.cpp  SavingsAccount.h  SavingsAccountDollar.cpp  SavingsAccountDollar.h  SavingsAccountEuro.cpp  SavingsAccountEuro.h  SavingsAccountTenge.cpp  SavingsAccountTenge.h  TrustAccount.cpp  TrustAccount.h  main.cpp
