cmake_minimum_required(VERSION 3.20)
project(Task_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Task_1 main.cpp Account.cpp Account.h SavingsAccount.cpp SavingsAccount.h SavingsAccountEuro.cpp SavingsAccountEuro.h SavingsAccountDollar.cpp SavingsAccountDollar.h SavingsAccountTenge.cpp SavingsAccountTenge.h)
